tests/baselines/reference/collisionSuperAndLocalVarInAccessors.errors.txt
==== tests/cases/compiler/collisionSuperAndLocalVarInAccessors.ts (4 errors) ====
    var _super = 10; // No Error
    class Foo {
        get prop1(): number {
            var _super = 10; // No error
            return 10;
        }
        set prop1(val: number) {
            var _super = 10; // No error
        }
    }
    class b extends Foo {
        get prop2(): number {
            var _super = 10; // Should be error
                ~~~~~~~~~~~
!!! collisionSuperAndLocalVarInAccessors.ts(13,13): error TS2205: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            return 10;
        }
        set prop2(val: number) {
            var _super = 10; // Should be error
                ~~~~~~~~~~~
!!! collisionSuperAndLocalVarInAccessors.ts(17,13): error TS2205: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
        }
    }
    class c extends Foo {
        get prop2(): number {
            var x = () => {
                var _super = 10; // Should be error
                    ~~~~~~~~~~~
!!! collisionSuperAndLocalVarInAccessors.ts(23,17): error TS2205: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
            return 10;
        }
        set prop2(val: number) {
            var x = () => {
                var _super = 10; // Should be error
                    ~~~~~~~~~~~
!!! collisionSuperAndLocalVarInAccessors.ts(29,17): error TS2205: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
        }
    }